--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -352,7 +352,8 @@ button {
 		width: 100%;
 		height: 100%;
 	}
-	
+}
+
 @media screen and (min-width: 1024px) {
 	.container {
 		margin-left: auto;
