--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -217,6 +217,7 @@ button {
 }
 .home__img {
 	height: 680px;
+	width: 100%;
 	object-fit: cover;
 }
 
@@ -322,6 +323,12 @@ button {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+@media screen and (max-width: 375px) {
+	.home__data h1 {
+		font-size: 1rem;
+	}
 }
 
 @media screen and (min-width: 767px) {
